gap fix

--- a/src/css/workingMethodology-sytem.css
+++ b/src/css/workingMethodology-sytem.css
@@ -44,7 +44,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  gap: 30px;
+  gap: 5px;
   margin: 20px auto;
 }
 
